<resources>
    <string name="app_name">Deli Cook</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="to_create_account"><u>Create Account</u></string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Log in</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="description_reset_password">An email with a reset link will be sent to you!</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="cooking">Cooking</string>
    <string name="experience">experience</string>
    <string name="get_started">Get Started</string>
    <string name="browse_your_favorite">Browse your favorite dishes...</string>
    <string name="france">France</string>
    <string name="vietnam">VietNam</string>
    <string name="america">America</string>
    <string name="india">India</string>
    <string name="learn">Learn</string>
    <string name="read_more">Read more</string>
    <string name="buy_ingredients">Buy Ingredients</string>
    <string name="shopping_list">Shopping List</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="taxes">Taxes</string>
    <string name="grand_total">Grand Total</string>
    <string name="pay_now">Pay now</string>
    <string name="search">Search bar</string>
    <string name="community">Community</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="no_item">No item</string>
</resources>