<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnSearch"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgProfile">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/browse_your_favorite"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:overScrollMode="never"
            android:singleLine="true"
            android:textColor="@color/white_EF_a50"
            android:textColorHint="@color/white_EF_a50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnCategory"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_category"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnSearch">

        <com.sudo248.shopping_food.ui.widget.VerticalTextView
            android:id="@+id/txtCategoryFrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/france"
            android:textColor="@color/white_EF_a50"
            tools:textColor="@color/primaryColor"
            android:textSize="16sp" />

        <com.sudo248.shopping_food.ui.widget.VerticalTextView
            android:id="@+id/txtCategoryVietNam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/vietnam"
            android:textColor="@color/white_EF_a50"
            android:textSize="16sp" />

        <com.sudo248.shopping_food.ui.widget.VerticalTextView
            android:id="@+id/txtCategoryAmerica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/america"
            android:textColor="@color/white_EF_a50"
            android:textSize="16sp" />

        <com.sudo248.shopping_food.ui.widget.VerticalTextView
            android:id="@+id/txtCategoryIndia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/india"
            android:textColor="@color/white_EF_a50"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lnCategory"
        app:layout_constraintTop_toBottomOf="@+id/lnSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_home_food" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>