<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:text="@string/shopping_list"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle_arrow_left"
                app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                tools:itemCount="3"
                tools:listitem="@layout/item_shopping" />

            <ImageView
                android:id="@+id/imgLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_line"
                app:layout_constraintTop_toBottomOf="@id/rcvIngredient" />

            <TextView
                android:id="@+id/txtApplyCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/img_coupon"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/apply_coupon_code"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:layout_constraintTop_toBottomOf="@+id/imgLine" />

            <TextView
                android:id="@+id/txtDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/delivery_charges"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtApplyCoupon" />

            <TextView
                android:id="@+id/txtDeliveryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="$0"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtDelivery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtDelivery" />

            <TextView
                android:id="@+id/txtTaxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/taxes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDeliveryPrice" />

            <TextView
                android:id="@+id/txtTaxesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="$0"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtTaxes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtTaxes" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/grand_total"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTaxes" />

            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="$0"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtTotal" />

            <TextView
                android:id="@+id/txtPayNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_search"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/pay_now"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>